--- a/TAILWIND/Menu Ejercicio Web/src/styles.css
+++ b/TAILWIND/Menu Ejercicio Web/src/styles.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 
+/*FUENTES*/
 @font-face{
     font-family: "TrebuchetMS";
     src: url('fonts/TrebuchetMS.ttf');
@@ -27,3 +28,28 @@
     font-weight: normal;
     font-style: normal;
 }
+
+/*GENERALES*/
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    background: url("../img/pattern.png");
+}
+
+.container{
+    width: 1250px;
+    margin: 0px auto;
+}
+
+.gear, .icon{
+    font-family: "WebSymbolsRegular"; 
+ }
+
+ .clearfix{
+     float:none;
+     clear:both;
+ }
